memory-game/style.css
@import url('https://fonts.googleapis.com/css2?family=Twinkle+Star&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color: #1c103a;
    font-family: 'Twinkle Star', cursive;
    font-size: 23px;
    color: #bec08c;
}

.wrapper {
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
    position: relative;
}

.header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: #3d3259;
    height: 100px;
}

.memory-game {
    max-width: 600px;
    min-width: 500px;
    height: 550px;
    margin: 0 10px;
    display: none;
    flex-wrap: wrap;
    perspective: 1000px;
}

.main {
    margin-top: 7px;
    min-height: calc(100vh - 176px);
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.main-after {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.gif {
    background-image: url(assets/card-set/gif.gif);
}

.result {
    display: none;
}

.winner {
    display: none;
}

.memory-card {
    position: relative;
    width: 140px;
    height: 140px;
    margin: 5px;
    transform: scale(1);
    transform-style: preserve-3d;
    transition: transform 0.5s;
}

.front-face,
.back-face {
    width: 100%;
    height: 100%;
    position: absolute;
    border-radius: 8px;
    backface-visibility: hidden;
}

.front-face {
    transform: rotateY(180deg);
}

.memory-card:active {
    transform: scale(0.97);
    transition: transform 0.2s;
}

.memory-card.flip {
    transform: rotateY(180deg);
}

.rules {
    margin: 0 20px;
}

.rules-after {
    width: 28%;
    margin-top: 10px;
    margin-bottom: 10px;
}

.rules-h2 {
    margin-bottom: 10px;
    text-align: center;
    text-shadow: 1px 1px 3px #8E83AC, -2px -2px 1px #8E83AC;
}

.rules-p {
    line-height: 30px;
}

.current-game {
    display: none;
    flex-direction: column;
    align-items: center;
    width: 28%;
    margin: 0 20px;
}

.header h1 {
    font-size: 65px;
    margin: 10px;
    text-shadow: 2px 2px 6px #8E83AC, -2px -2px 1px #8E83AC;
}

.game-item {
    font-size: 27px;
    font-weight: bold;
    margin: 20px;
    text-align: center;
}

.div-style {
    width: 315px;
    text-align: center;
    line-height: 22px;
}

.result-after {
    display: flex;
    font-size: 40px;
    text-shadow: 2px 2px 3px #8E83AC;
}

.winner-after {
    display: flex;
    font-size: 60px;
    font-weight: bold;
    color: #515415;
    text-shadow: 2px 2px 4px #c0b57a;
}

.new-game {
    width: 190px;
    height: 50px;
    margin: 25px;
    margin-top: 0;
    font-family: inherit;
    font-size: 26px;
    font-weight: 700;
    padding: 5px;
    outline: none;
    border: none;
    border-radius: 5px;
    background-color: #7e8142;
    color: #3d3259;
    text-shadow: 2px 2px 6px #8E83AC, -2px -2px 1px #8E83AC;
    transform: scale(1);
    transition: color 0.6s;
}

.new-game:active {
    transform: scale(0.96);
}

.new-game:hover {
    color: #1c103a;
}

.time {
    display: inline-block;
    width: 140px;
    height: 42px;
    padding: 5px 10px;
    border-radius: 5px;
    background-color: #515415;
    font-weight: 500;
}

.moves {
    display: inline-block;
    background-color: #515415;
    padding: 5px 10px;
    border-radius: 5px;
    font-weight: 500;
}

.sets-of-cards {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.sets-of-cards h2 {
    margin: 15px 20px 10px 20px;
    text-shadow: 2px 2px 6px #8E83AC, -2px -2px 1px #8E83AC;
}

.disney-cards img,
.actors-cards img,
.science-cards img {
    width: 80px;
    border-radius: 5px;
    margin-right: 10px;
}

.disney-cards,
.actors-cards,
.science-cards {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    row-gap: 5px;
    margin: 5px 10px;
    border: 2px solid #515415;
    padding: 5px;
    border-radius: 5px;
    transform: scale(1);
}

.disney-cards:hover,
.actors-cards:hover,
.science-cards:hover {
    transform: scale(1.03);
}

.cards-active {
    box-shadow: 4px 4px 10px #826e42, -4px -4px 10px #826e42;
}

.disney-cards p,
.actors-cards p,
.science-cards p {
    padding: 25px;
}

.table {
    display: none;
}

.table-style {
    margin: 5px 30px 10px 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.play {
    width: 170px;
    height: 50px;
    margin: 25px;
    font-family: inherit;
    font-size: 30px;
    font-weight: bold;
    padding: 5px;
    outline: none;
    border: none;
    border-radius: 5px;
    background-color: #7e8142;
    color: #3d3259;
    transform: scale(1);
    transition: color 0.6s;
}

.play:active {
    transform: scale(0.96);
}

.play:hover {
    color: #1c103a;
}

.records {
    font-weight: bold;
    text-align: center;
}

.record-text {
    font-size: 18px;
    color: #8E83AC;
}

.span-style {
    font-size: 19px;
}

.game-history {
    text-align: center;
    margin-top: 15px;
    font-weight: bold;
}

.result-list {
    margin-top: 129px;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 65px;
    padding-top: 10px;
}

.footer {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    background-color: #3D3259;
    padding: 15px;
    width: 100%;
}

.footer-data span:nth-child(2) {
    margin: 0 15px;
}

.footer-data {
    padding-top: 10px;
}

.github-link {
    text-decoration: none;
    color: #7e8142;
    transition: color 0.6s;
    -webkit-tap-highlight-color: transparent;
}

.github-link:hover {
    color: #515415;
}

.rs-img {
    filter: brightness(0) saturate(100%) invert(47%) sepia(67%) saturate(288%) hue-rotate(24deg) brightness(90%) contrast(89%);
    transition: filter 0.6s;
    width: 100px;
    -webkit-tap-highlight-color: transparent;
}

.rs-img:hover {
    filter: brightness(0) saturate(100%) invert(29%) sepia(8%) saturate(2087%) hue-rotate(25deg) brightness(92%) contrast(84%);
}

@media (max-width: 1283px) {
    .table-style {
        margin: 5px 0px 10px 0px;
    }
}

@media (max-width: 1235px) {
    .memory-card {
        width: 100px;
        height: 100px;
    }

    .memory-game {
        max-width: 440px;
        min-width: 440px;
        height: 400px;
        margin-top: 30px;
    }

    .rules-after {
        width: 28%;
        margin-top: 40px;
        margin-bottom: 10px;
    }

    .current-game {
        margin: 0;
    }
}

@media (max-width: 1065px) {
    .main-after {
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .memory-game {
        height: 340px;
        margin-top: 30px;
    }

    article,
    aside {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 20px;
    }

    .rules {
        width: 95%;
        margin: 0 20px;
    }

    .rules-after {
        margin-top: 20px;
        margin-bottom: 20px;
    }

    .current-game {
        display: none;
        flex-direction: row;
        justify-content: center;
        width: 100%;
        margin: 20px;
    }

    .winner-after {
        position: absolute;
        top: 370px;
        left: auto;
        right: auto;
        z-index: 3;
        color: #bec08c;
        text-shadow: 2px 2px 4px #515415;
    }

    .new-game {
        width: 180px;
        height: 57px; 
        font-size: 20px;
    }
}

@media (max-width: 685px) {
    body {
        font-size: 19px;
    } 

   .game-item {
        font-size: 20px;
        margin: 5px; 
    }

    .time {
        display: inline-block;
        width: 110px;
        height: 35px;
    }

    .new-game {
        width: 180px;
        height: 45px; 
        font-size: 20px;
    }

    .moves {
        height: 35px;
    }

    .winner-after {
        font-size: 45px;
        top: 320px;
    }

    article,
    aside {
        line-height: 27px;
    }

    .span-style,
    .record-text {
        font-size: 16px;
    }
}

@media (max-width: 510px) {
    .new-game {
        width: 180px;
        height: 48px; 
        font-size: 19px;
        line-height: 18px;
    }
}

@media (max-width: 480px) {
    .main {
        min-height: calc(100vh - 174px);
    }

    .memory-card {
        width: 70px;
        height: 70px;
    }

    .memory-game {
        max-width: 320px;
        min-width: 320px;
        height: 270px;
        row-gap: 10px;
    }

    .header h1 {
        font-size: 45px;
        margin: 22px;
    }
}

@media (max-width: 411px) {
    .new-game {
        width: 180px;
        height: 63px; 
        font-size: 19px;
        line-height: 18px;
    }

    .rules {
        width: 90%;
    }
}

@media (max-width: 362px) {
    .result {
        display: none;
    }
}

@media (max-width: 350px) {
    .memory-card {
        width: 55px;
        height: 55px;
    }

    .memory-game {
        max-width: 260px;
        min-width: 260px;
        height: 260px;
    }

    .header h1 {
        font-size: 40px;
        margin: 25px 0;
    }

    .div-style {
        width: 300px;
    }

    .footer-data span:nth-child(2) {
        margin: 0 5px;
    }
}

.visible {
    display: flex;
}

.invisible {
    display: none;
}

